tests/error/template_n_mismatch.gw
// [contains] arguments do not match for template call
template <i>
function void test(){ <<<"func">>>;}
template <i>
function void test(int i){<<<"other func">>>;}

test<int, float, int>();
//test<int>();
